--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -15,7 +15,7 @@ button_1_link:
 <wrapper class="hero-image">
 	<container>
 		<row class="cava-name">
-			<img src="{{ root }}/assets/img/cava.jpg"  />
+			<img src="https://i.imgur.com/cRDPS7h.jpg"  />
 		</row>
 	</container>
 </wrapper>
@@ -23,7 +23,7 @@ button_1_link:
 <wrapper class="hero-image">
 	<container>
 		<row class="big-gif">
-			<img src="{{ root }}/assets/img/banner-img.gif"  />
+			<img src="https://i.imgur.com/tjnkxaR.gifv"  />
 		</row>
 	</container>
 </wrapper>
@@ -45,13 +45,13 @@ button_1_link:
 		</h1>
 		<center>
 			<row class="seasonal-item-img">
-				<img src="{{ root }}/assets/img/seasonal.jpg"  />
+				<img src="https://i.imgur.com/hjLPlWA.jpg"  />
 			</row>
 			<row class="seasonal-item-img">
-				<img src="{{ root }}/assets/img/meatballs.jpg"  />
+				<img src="https://i.imgur.com/2MCMSYF.jpg"  />
 			</row>
 			<row class="seasonal-item-img">
-				<img src="{{ root }}/assets/img/grilled-chicken.jpg"  />
+				<img src="https://i.imgur.com/kRk4O5Q.jpg"  />
 			</row>
 		</center>
 	</container>
@@ -64,7 +64,7 @@ button_1_link:
     <row>
     <columns>
       <center>
-        <button href="#" class="large">bring the heat</button>
+        <button href="https://order.cava.com/stores?utm_campaign=17ff18f480-EMAIL_2019_Summer_CWF_Protein_EC_080619&utm_medium=email&utm_source=CAVA+Communications&utm_term=0_0781726cfb-17ff18f480-195867929" class="large">bring the heat</button>
       </center>
     </columns>
   </row>
@@ -87,7 +87,7 @@ button_1_link:
     <row>
     <columns>
       <center>
-        <button href="#" class="large">see our grill tips</button>
+        <button href="http://forthosewhosavor.com/tag/grilling-recipes/?utm_source=CAVA+Communications&utm_campaign=17ff18f480-EMAIL_2019_Summer_CWF_Protein_EC_080619&utm_medium=email&utm_term=0_0781726cfb-17ff18f480-195867929" class="large">see our grill tips</button>
       </center>
     </columns>
   </row>
