--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,9 +1,6 @@
 ---
 # Basics
-subject: grill school is in session
-
-button_1_copy:
-button_1_link:
+subject: John, grill school is in session
 ---
 
 <spacer size="16"></spacer>
@@ -23,7 +20,7 @@ button_1_link:
 <wrapper class="hero-image">
 	<container>
 		<row class="big-gif">
-			<img src="https://i.imgur.com/tjnkxaR.gifv"  />
+			<img src="https://i.imgur.com/tjnkxaR.gif"  />
 		</row>
 	</container>
 </wrapper>
@@ -31,10 +28,12 @@ button_1_link:
 <wrapper class="paragraphs">
 	<container>
 		<center>
+			<spacer size="15"></spacer>
 			<p class="sizzle-text">
 				Fire. Spice. Char. There’s nothing quite like the magic that happens when fresh proteins and bold flavors meet open flame. Satisfy those grilled-kissed cravings with these protein pairings.
 			</p>
 		</center>
+		<spacer size="15"></spacer>
 	</container>
 </wrapper>
 
